--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <tbody>
             <tr>
                 <td>
-                    <table class="container" width="600px" cellspacing="0" cellpadding="10" border="0" align="center"
-                        style="background: white">
+                    <table class="container" width="600px" cellspacing="0" cellpadding="0" border="0" align="center"
+                        style="background: white; padding: 20px;">
                         <tbody>
                             <!--Logo row-->
                             <tr>
@@ -23,7 +23,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <img src="/img/logo.png">
+                                                    <img src="/img/car-logo.png">
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -48,15 +48,31 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <p style="margin: 0; font-size: 12px; font-weight: 400;">100% of tips go to drivers! <a href="#">Add a tip.</a></p>
+                                                    <p style="margin: 0; font-size: 12px; font-weight: 400;">100% of tips go to drivers! <a href="#" style="color: rgb(1, 207, 1);">Add a tip.</a></p>
                                                 </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </td>
                             </tr>
-                        </tbody>
+            
+                            <!--Price information Row-->
+                            <tr>
+                                <td>
+                                    <table class="price" width="100%" cellspacing="0" cellpadding="0">
+                                        <tr>
+                                            <td>
+                                                <p>Ride fare (4.73mi, 10m 21s)</p>
+                                            </td>
+                                            <td align="right">
+                                                <p>$13.88</p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
 
+                        </tbody>
                     </table>
                 </td>
             </tr>
