--- a/index.html
+++ b/index.html
@@ -59,13 +59,86 @@
                             <!--Price information Row-->
                             <tr>
                                 <td>
-                                    <table class="price" width="100%" cellspacing="0" cellpadding="0">
+                                    <table class="price" width="100%" cellspacing="0" cellpadding="0" style="padding: 20px 0;">
+                                        <tr>
+                                            <td >
+                                                <p style="margin: 2px 0; font-size: 1.1rem;">Ride fare (4.73mi, 10m 21s)</p>
+                                            </td>
+                                            <td align="right" >
+                                                <p style="margin: 0; font-size: 1.1rem;">$13.88</p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td >
+                                                <p style="margin: 2px 0; font-size: 1.1rem;">New York Sales Tax</p>
+                                            </td>
+                                            <td align="right" >
+                                                <p style="margin: 0; font-size: 1.1rem;">$1.21</p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td >
+                                                <p style="margin: 2px 0 30px 0; font-size: 1.1rem;">Black Car Fund Surcharge</p>
+                                            </td>
+                                            <td align="right" >
+                                                <p style="margin: 2px 0 30px 0; font-size: 1.1rem;">$0.35</p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="2" style="height: 1px; background: black;"></td>
+                                        </tr>
+                                        <tr>
+                                            <td style="padding: 15px 0; display: flex;">
+                                                <img src="/img/visa-icon.png" width="40px;">
+                                                <p style="margin: 0 10px; font-size: 1.1rem;">Visa *1234</p>
+                                            </td>
+                                            <td align="right" >
+                                                <p style="margin: 0; font-size: 1.1rem;">$15.44</p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+
+                            <!--Pay Notice row-->
+                            <tr>
+                                <td>
+                                    <table class="pay-notice" width="100%" cellspacing="0" cellpadding="0" align="left" border="0" style="background: rgb(238, 238, 238); padding: 20px;">
                                         <tr>
                                             <td>
-                                                <p>Ride fare (4.73mi, 10m 21s)</p>
+                                                <p style="font-size: .85rem;"><strong>You've already paid for this ride.</strong>
+                                                <br>
+                                                This total may not match the charge on your account statement. 
+                                                The payment for this ride might be combined with any other rides you took on April 9, 2023. 
+                                                Keep in mind that the cost of this ride and the total charge may not reflect refunds, credits, or other changes.
+                                                </p>
                                             </td>
-                                            <td align="right">
-                                                <p>$13.88</p>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+
+                            <!--Ride Map and Information row-->
+                            <tr>
+                                <td>
+                                    <table class="ride-info" width="100%" cellspacing="0" cellpadding="0" style="padding: 30px 0;">
+                                        <tr>
+                                            <td style="padding-bottom: 30px;">
+                                                <img src="/img/ride-map.png" width="100%">
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="display: flex; padding: 0 10px;">
+                                                <img src="/img/pickup-dot.png" width="10" height="10" style="position: relative; top: 8px;">
+                                                <p style="margin: 0 20px; color: indigo; font-weight: 600; font-size: 1.4rem">Pickup at 8:14 PM <br>
+                                                    <span style="color: black; font-size: 1rem; font-weight: 400;">1234 Random Ave, New York, NY</span></p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="display: flex; padding: 10px;">
+                                                <img src="/img/dropoff-dot.png" width="10" height="10" style="position: relative; top: 8px;">
+                                                <p style="margin: 0 20px; color: magenta; font-weight: 600; font-size: 1.4rem">Drop-off at 8:29 PM <br>
+                                                    <span style="color: black; font-size: 1rem; font-weight: 400;">4321 Strange Ave, Brooklyn, NY</span></p>
                                             </td>
                                         </tr>
                                     </table>
