--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                                 <p style="font-size: .85rem;"><strong>You've already paid for this ride.</strong>
                                                 <br>
                                                 This total may not match the charge on your account statement. 
-                                                The payment for this ride might be combined with any other rides you took on April 9, 2023. 
+                                                The payment for this ride might be combined with any other rides you took on April 1, 2023. 
                                                 Keep in mind that the cost of this ride and the total charge may not reflect refunds, credits, or other changes.
                                                 </p>
                                             </td>
@@ -139,6 +139,97 @@
                                                 <img src="/img/dropoff-dot.png" width="10" height="10" style="position: relative; top: 8px;">
                                                 <p style="margin: 0 20px; color: magenta; font-weight: 600; font-size: 1.4rem">Drop-off at 8:29 PM <br>
                                                     <span style="color: black; font-size: 1rem; font-weight: 400;">4321 Strange Ave, Brooklyn, NY</span></p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+
+                            <!--Advertise the App-->
+                            <tr>
+                                <td>
+                                    <table class="app" width="100%" cellspacing="0" cellpadding="0" style="text-align: center; background:rgb(191, 250, 191); margin-bottom: 30px;">
+                                        <tr>
+                                            <td>
+                                                <h2 style="margin: 20px 0;">Book rides easily with the RIDE app today!</h2>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <h3 style="margin: 0 0 20px;"><a href="https://www.linkedin.com/in/tamjidul-refat/" target="_blank" style="color: black;"> Click here to download</a> </h3>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+
+                            <!--Footer-buttons row-->
+                            <tr>
+                                <td>
+                                    <table class="footer-buttons" width="100%" cellspacing="0" cellpadding="0" border="0" style="background:rgb(238, 238, 238); text-align: center; padding: 20px 0 50px;">
+                                        <tr>
+                                            <td style="padding: 20px;"> 
+                                                <a href="https://www.linkedin.com/in/tamjidul-refat/" target="_blank" style="text-decoration: none; color: black; background: white; font-size: 1rem; font-weight: 600; padding: 15px 86px; border-radius: 50px;">Tip Driver</a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="padding: 40px;">
+                                                <a href="https://www.linkedin.com/in/tamjidul-refat/" target="_blank" style="text-decoration: none; color: black; background: white; font-size: 1rem; font-weight: 600; padding: 15px 70px; border-radius: 50px;">Find Lost Item</a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="padding: 20px;">
+                                                <a href="https://www.linkedin.com/in/tamjidul-refat/" target="_blank" style="text-decoration: none; color: black; background: white; font-size: 1rem; font-weight: 600; padding: 15px 55px; border-radius: 50px;">Request a Review</a>
+                                            </td>
+                                        </tr>
+                                    </table>
+
+                                </td>
+                            </tr>
+
+                            <!--Footer-->
+                            <tr>
+                                <td>
+                                    <table class="footer" width="100%" cellspacing="0" cellpadding="0" align="center" border="0" style="text-align: center; background:rgb(238, 238, 238)">
+                                        <tr>
+                                            <td>
+                                                <p style="font-size: 0.8rem;">
+                                                    Dispatching Base: Tri-City (B03406). Affiliated Base: (B01087) <br>
+                                                    Vehicle License Number: T123456C. Driver TLC License: 7654321. <br>
+                                                    To submit a complaint to the NYC TLC, please call 311.
+                                                </p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <a href="https://www.linkedin.com/in/tamjidul-refat/" target="_blank" style="text-decoration: none; font-size: 0.9rem; color:rgb(1, 207, 1)">Help Center</a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <p style="font-size: 0.9rem;">Receipt #1234567890987654321</p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <p style="font-size: 0.8rem">
+                                                    We never share your address with your driver after a ride. <br>
+                                                    <a href="https://www.linkedin.com/in/tamjidul-refat/" target="blank" style="color:rgb(1, 207, 1)"> Learn more</a> about our committment to safety
+                                                </p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <a href="https://www.openstreetmap.org/copyright" target="_blank" style="font-size: 0.8rem; color:rgb(1, 207, 1)">&copy; OpenStreetMap</a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <p style="font-size: 0.9rem; color: rgba(0, 0, 0, 0.8);">
+                                                    2023 RIDE, Inc. <br>
+                                                    548 Market St., P.O. Box 68514 <br>
+                                                    San Francisco, CA 94104 <br>
+                                                    CPUC ID No. TCP0032513 - P</p>
                                             </td>
                                         </tr>
                                     </table>
